--- a/sourse/pug/blocks/sCases/_sCases.pug
+++ b/sourse/pug/blocks/sCases/_sCases.pug
@@ -7,68 +7,30 @@ mixin sCases(data)
 			.tabs
 				.tabs__caption
 					.tabs__btn.active
-						span Дашборд регионов
+						span Онбординг
+					.tabs__btn
+						span Дашборд
 					.tabs__btn
 						span Цифровой помощник
 					.tabs__btn
-						span Росмолодёжь-Digital
-					.tabs__btn
-						span Объединяя молодёжь
+						span Молодёжный туризм
 				.tabs__wrap
 					.tabs__content.active
 						.tabs__content-wrap
-							h4 Дашборд регионов
-							.small Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
+							h4 Онбординг
+							.small Разработай digital-систему для онбординга новых сотрудников с&nbsp;элементами геймификации
 							.tabs__tags
-								.btn Mobile
-								.btn Web
-								.btn CV
-							p Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.
-							a(href="#").tabs__content-btn Хочу решить кейс
-						.tabs__case-manager
-							.tabs__case-manager-btn
-								h5 Постановщик кейса
-							.tabs__case-manager-body
-								+b.case-slider--js.swiper
-									.swiper-wrapper
-										+e.slide.swiper-slide
-											+e.item
-												+e.img-wrap
-													.img-wrap-center
-														+img(src="img/svg/cases-logo-1.svg")
-												+e.title Федеральное агентство по&nbsp;делам молодёжи
-										+e.slide.swiper-slide
-											+e.item
-												+e.img-wrap
-													.img-wrap-center
-														+img(src="img/svg/cases-logo-1.svg")
-												+e.title Федеральное агентство по&nbsp;делам молодёжи
-										+e.slide.swiper-slide
-											+e.item
-												+e.img-wrap
-													.img-wrap-center
-														+img(src="img/svg/cases-logo-1.svg")
-												+e.title Федеральное агентство по&nbsp;делам молодёжи
-								.swiper-pagination
-								.tabs__links
-									a(href="#").tabs__content-link
-										+icon('sCases-video')
-										span Видеоинтервью
-									a(href="#").tabs__content-link
-										+icon('sCases-project')
-										span Презентация кейса
-									a(href="#").tabs__content-link
-										+icon('sContact-win')
-										span Победители и&nbsp;призеры
-					.tabs__content
-						.tabs__content-wrap
-							h4 Цифровой помощник
-							.small Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
-							.tabs__tags
-								.btn Mobile
-								.btn Web
-								.btn CV
-							p Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.
+								.row
+									.col-auto
+										.btn Управление персоналом
+									.col-auto
+										.btn Mobile
+									.col-auto
+										.btn Чат-бот
+							p Миссия Росмолодёжи&nbsp;&mdash; создать среду, которая поможет молодым найти и&nbsp;реализовать свои мечты и&nbsp;таланты в&nbsp;нашей стране.
+							p Каждый год в&nbsp;команду Росмолодёжи приходят новые специалисты, которых необходимо интегрировать в&nbsp;экосистему ведомства и&nbsp;его корпоративную культуру.
+							p Руководителям подразделений и&nbsp;коллегам сложно мгновенно погрузить нового сотрудника в&nbsp;специфику его деятельности. Необходимые для адаптации новичков документы хранятся на&nbsp;различных ресурсах. Новый человек попадает в&nbsp;активный информационный поток, с&nbsp;большим количеством событий, мероприятий, внешних и&nbsp;внутренних коммуникаций. В&nbsp;результате у&nbsp;многих в&nbsp;начале работы возникают сложности с&nbsp;поиском необходимых материалов и&nbsp;контактов.
+							p Перед участниками хакатона стоит задача разработать информационный сервис&nbsp;&mdash; инструмент для современного и&nbsp;качественного процесса адаптации, помогающий в&nbsp;поиске необходимых материалов и&nbsp;выстраивании эффективных коммуникаций между новыми сотрудниками, HR-службой и&nbsp;руководством.
 							a(href="#").tabs__content-btn Хочу решить кейс
 						.tabs__case-manager
 							.tabs__case-manager-btn
@@ -96,13 +58,19 @@ mixin sCases(data)
 										span Победители и&nbsp;призеры
 					.tabs__content
 						.tabs__content-wrap
-							h4 Росмолодёжь-Digital
-							.small Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
+							h4 Дашборд
+							.small Разработай дашборд&nbsp;&mdash; инструмент анализа и&nbsp;визуализации данных, поступающих от&nbsp;субъектов молодёжной политики России
 							.tabs__tags
-								.btn Mobile
-								.btn Web
-								.btn CV
-							p Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.
+								.row
+									.col-auto
+										.btn Дашборды
+									.col-auto
+										.btn Аналитика
+									.col-auto
+										.btn Web
+							p Информационный ресурс Росмолодёжи (ФГАИС &laquo;Молодежь России&raquo;) позволяет собирать данные о&nbsp;субъектах государственной молодёжной политики и&nbsp;результатах их&nbsp;деятельности более, чем по&nbsp;400 показателям из&nbsp;11&nbsp;разделов для формирования различных отчетов.
+							p На&nbsp;сегодняшний день большой массив данных собирается в&nbsp;виде таблиц, что недостаточно информативно, с&nbsp;точки зрения их&nbsp;визуализации. Таблицы неудобно использовать в&nbsp;рамках выступлений или презентаций.
+							p Перед участниками хакатона, выбравшими этот кейс, стоит задача разработки информативных и&nbsp;интересных, с&nbsp;точки зрения интерфейса, дашбордов, визуализирующих табличные данные для руководителя и&nbsp;сотрудников Росмолодёжи.
 							a(href="#").tabs__content-btn Хочу решить кейс
 						.tabs__case-manager
 							.tabs__case-manager-btn
@@ -116,18 +84,7 @@ mixin sCases(data)
 													.img-wrap-center
 														+img(src="img/svg/cases-logo-1.svg")
 												+e.title Федеральное агентство по&nbsp;делам молодёжи
-										+e.slide.swiper-slide
-											+e.item
-												+e.img-wrap
-													.img-wrap-center
-														+img(src="img/svg/cases-logo-1.svg")
-												+e.title Федеральное агентство по&nbsp;делам молодёжи
-										+e.slide.swiper-slide
-											+e.item
-												+e.img-wrap
-													.img-wrap-center
-														+img(src="img/svg/cases-logo-1.svg")
-												+e.title Федеральное агентство по&nbsp;делам молодёжи
+										
 								.swiper-pagination
 								.tabs__links
 									a(href="#").tabs__content-link
@@ -141,13 +98,52 @@ mixin sCases(data)
 										span Победители и&nbsp;призеры
 					.tabs__content
 						.tabs__content-wrap
-							h4 Объединяя молодёжь
-							.small Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
+							h4 Цифровой помощник
+							.small Разработай цифрового помощника по&nbsp;заполнению заявки на&nbsp;получение грантов для&nbsp;молодёжи России
 							.tabs__tags
-								.btn Mobile
-								.btn Web
-								.btn CV
-							p Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.
+								.row
+									.col-auto
+										.btn Web
+							p У&nbsp;Росмолодёжи есть информационный ресурс (ФГАИС &laquo;Молодежь России&raquo;), обеспечивающий взаимодействие между субъектами молодёжной политики, реализацию мероприятий, программ и&nbsp;мер государственной поддержки для молодёжи, в&nbsp;частности, предоставление грантов для воплощения творческих, патриотических, образовательных, добровольческих и&nbsp;иных проектов. На&nbsp;сегодняшний день в&nbsp;нем зарегистрировано более 2&nbsp;млн. пользователей.
+							p При заполнении заявок у&nbsp;участников грантового конкурса часто возникают вопросы. Ежедневно в&nbsp;техническую поддержку поступает более 20&nbsp;обращений по&nbsp;навигации и&nbsp;поиску необходимой информации, более 40&nbsp;обращений по&nbsp;подаче заявки на&nbsp;мероприятия, до&nbsp;150 обращений по&nbsp;вопросу подачи заявки на&nbsp;получение грантовой поддержки.  Основная проблема&nbsp;&mdash; сложный и&nbsp;&laquo;негибкий&raquo; интерфейс грантового модуля ФГАИС &laquo;Молодежь России&raquo;.
+							p Во&nbsp;время хакатона участникам нужно разработать цифровой помощник по&nbsp;заполнению заявки для участия в&nbsp;грантовом конкурсе. Помощник может иметь голосовое управление (участникам предлагается предоставить прототип или концепцию голосового модуля цифрового помощника).
+							a(href="#").tabs__content-btn Хочу решить кейс
+						.tabs__case-manager
+							.tabs__case-manager-btn
+								h5 Постановщик кейса
+							.tabs__case-manager-body
+								+b.case-slider--js.swiper
+									.swiper-wrapper
+										+e.slide.swiper-slide
+											+e.item
+												+e.img-wrap
+													.img-wrap-center
+														+img(src="img/svg/cases-logo-1.svg")
+												+e.title Федеральное агентство по&nbsp;делам молодёжи
+										
+								.swiper-pagination
+								.tabs__links
+									a(href="#").tabs__content-link
+										+icon('sCases-video')
+										span Видеоинтервью
+									a(href="#").tabs__content-link
+										+icon('sCases-project')
+										span Презентация кейса
+									a(href="#").tabs__content-link
+										+icon('sContact-win')
+										span Победители и&nbsp;призеры
+					.tabs__content
+						.tabs__content-wrap
+							h4 Молодёжный туризм
+							.small Разработай digital-систему для онбординга новых сотрудников с&nbsp;элементами геймификации
+							.tabs__tags
+								.row
+									.col-auto
+										.btn Mobile
+							p Цифровая платформа молодёжного и&nbsp;студенческого туризма студтуризм.рф позволяет студентам бронировать кампусы по&nbsp;всей России. Ежедневно на&nbsp;сайте регистрируются более 29&nbsp;000 новых пользователей. В&nbsp;настоящий момент существует только браузерная версия платформы.
+							p При открытии сайта на&nbsp;мобильном устройстве через браузер, могут некорректно отображаться поля для ввода данных, что неудобно для пользователей и&nbsp;способствует их&nbsp;оттоку с&nbsp;ресурса. Молодые люди не&nbsp;могут использовать платформу по&nbsp;дороге на&nbsp;учебу или работу, в&nbsp;отпуске или в&nbsp;путешествии. Таким образом, многие возможности платформы остаются незамеченными.
+							p Мобильное приложение позволит подавать и&nbsp;оперативно отслеживать статус заявки на&nbsp;бронирование места размещения, участвовать в&nbsp;мероприятиях и&nbsp;просматривать новости. 
+							p Участникам хакатона предстоит разработать мобильную версию платформы с&nbsp;удобным интерфейсом и&nbsp;функциями push-уведомлений, постингом в&nbsp;социальную сеть&nbsp;VK, геймификацией и&nbsp;различными другими полезными функциями.
 							a(href="#").tabs__content-btn Хочу решить кейс
 						.tabs__case-manager
 							.tabs__case-manager-btn
@@ -165,14 +161,14 @@ mixin sCases(data)
 											+e.item
 												+e.img-wrap
 													.img-wrap-center
-														+img(src="img/svg/cases-logo-1.svg")
-												+e.title Федеральное агентство по&nbsp;делам молодёжи
+														+img(src="img/svg/cases-logo-2.svg")
+												+e.title &laquo;Больше, чем путешествие&raquo;
 										+e.slide.swiper-slide
 											+e.item
 												+e.img-wrap
 													.img-wrap-center
-														+img(src="img/svg/cases-logo-1.svg")
-												+e.title Федеральное агентство по&nbsp;делам молодёжи
+														+img(src="img/svg/cases-logo-3.svg")
+												+e.title Министерство науки и&nbsp;высшего образования Российской Федерации
 								.swiper-pagination
 								.tabs__links
 									a(href="#").tabs__content-link
