sFAQ section done

--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -15,6 +15,7 @@ include ../blocks/sAbout/_sAbout.pug
 include ../blocks/sTeam/_sTeam.pug
 include ../blocks/sPersons/_sPersons.pug
 include ../blocks/sLogos/_sLogos.pug
+include ../blocks/sFAQ/_sFAQ.pug
 //- include ../blocks/sCatalog/_sCatalog.pug
 include ../blocks/footer/_footer.pug
 
@@ -41,8 +42,8 @@ block pagecontent
 		+sPrize()
 		+sPersons()
 		+sLogos()
+		+sFAQ()
 		+sContact()
-		
 	+footer()
       
 
