--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -8,4 +8,4 @@ mixin footer()
 				.col-md-auto
 					a(href="#") Положение о&nbsp;Конкурсе
 				.col-md-auto
-					a(href="#") FAQ
+					a(href="#sFAQ") FAQ
