--- a/sourse/pug/blocks/sLogos/_sLogos.scss
+++ b/sourse/pug/blocks/sLogos/_sLogos.scss
@@ -43,6 +43,10 @@
 	&__slide{
 		// @include col-sw;
 		padding-left: 15px;padding-right: 15px;
+		img{
+			// max-width: 80%;
+			max-height: 80%;
+		}
 		@include media-breakpoint-up(lg) {
 			max-width: 25% !important;
 			width: 25% !important;
