--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -12,8 +12,8 @@ mixin headerBlock()
 				p Всероссийский хакатон <br> для талантливых IT-специалистов
 				ul
 					li Соревнуйся за&nbsp;призовой фонд в&nbsp;1&nbsp;миллион рублей и&nbsp;захватывающее путешествие по&nbsp;России
-					li Приходи кодить на&nbsp;офлайн-площадку в&nbsp;Москве
 					li Участвуй онлайн из&nbsp;любой точки страны
+					li Приходи кодить на&nbsp;офлайн-площадку
 					li Регистрируйся до&nbsp;14&nbsp;февраля
 				+e.btn(href="#").btn.btn-success Зарегистрироваться
 	// end headerBlock
