--- a/sourse/pug/blocks/sCases/_sCases.pug
+++ b/sourse/pug/blocks/sCases/_sCases.pug
@@ -46,7 +46,8 @@ mixin sCases(data)
 												+e.title Федеральное агентство по&nbsp;делам молодёжи
 										
 								.swiper-pagination
-								.tabs__links
+								// - tabs__links скрыт классом .d-none
+								.tabs__links.d-none
 									a(href="#").tabs__content-link
 										+icon('sCases-video')
 										span Видеоинтервью
@@ -86,7 +87,8 @@ mixin sCases(data)
 												+e.title Федеральное агентство по&nbsp;делам молодёжи
 										
 								.swiper-pagination
-								.tabs__links
+								// - tabs__links скрыт классом .d-none
+								.tabs__links.d-none
 									a(href="#").tabs__content-link
 										+icon('sCases-video')
 										span Видеоинтервью
@@ -122,7 +124,8 @@ mixin sCases(data)
 												+e.title Федеральное агентство по&nbsp;делам молодёжи
 										
 								.swiper-pagination
-								.tabs__links
+								// - tabs__links скрыт классом .d-none
+								.tabs__links.d-none
 									a(href="#").tabs__content-link
 										+icon('sCases-video')
 										span Видеоинтервью
@@ -135,7 +138,7 @@ mixin sCases(data)
 					.tabs__content
 						.tabs__content-wrap
 							h4 Молодёжный туризм
-							.small Разработай digital-систему для онбординга новых сотрудников с&nbsp;элементами геймификации
+							.small Разработай мобильное приложение для сайта студтуризм.рф
 							.tabs__tags
 								.row
 									.col-auto
@@ -162,7 +165,7 @@ mixin sCases(data)
 												+e.img-wrap
 													.img-wrap-center
 														+img(src="img/svg/cases-logo-2.svg")
-												+e.title &laquo;Больше, чем путешествие&raquo;
+												+e.title Больше, чем путешествие
 										+e.slide.swiper-slide
 											+e.item
 												+e.img-wrap
@@ -170,7 +173,8 @@ mixin sCases(data)
 														+img(src="img/svg/cases-logo-3.svg")
 												+e.title Министерство науки и&nbsp;высшего образования Российской Федерации
 								.swiper-pagination
-								.tabs__links
+								// - tabs__links скрыт классом .d-none
+								.tabs__links.d-none
 									a(href="#").tabs__content-link
 										+icon('sCases-video')
 										span Видеоинтервью
