--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -4,8 +4,8 @@ mixin footer()
 		.container
 			+e.row.row
 				.col-md-auto
-					a(href="#") Политика конфиденциальности
+					a(href="https://storage.yandexcloud.net/mp-hackathon/policy.pdf" target="_blank") Политика конфиденциальности
 				.col-md-auto
-					a(href="#") Положение о&nbsp;Конкурсе
+					a(href="https://storage.yandexcloud.net/mp-hackathon/polozhenie.pdf" target="_blank") Положение о&nbsp;Конкурсе
 				.col-md-auto
 					a(href="#sFAQ") FAQ
