--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -15,5 +15,5 @@ mixin headerBlock()
 					li Участвуй онлайн из&nbsp;любой точки страны
 					li Приходи кодить на&nbsp;офлайн-площадку
 					li Регистрируйся до&nbsp;14&nbsp;февраля
-				+e.btn(href="#").btn.btn-success Зарегистрироваться
+				+e.btn.btn.btn-success(href="https://lk.youthbit.ru/") Регистрация/Войти
 	// end headerBlock
