--- a/sourse/pug/blocks/mixin-wrap/components/soc.pug
+++ b/sourse/pug/blocks/mixin-wrap/components/soc.pug
@@ -1,4 +1,4 @@
-mixin item-sos(icon, a='#')
+mixin item-sos(icon, a='https://t.me/youthbit')
 	+e.A.item(href= a target="_blank")
 		if block
 			block
