--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -15,11 +15,11 @@ mixin sContact()
 									a(href="email:support@youthbit.ru") support@youthbit.ru
 							.col-sm-auto
 								+b.social
-									+e.link(href= "#" target="_blank")
+									+e.link(href= "https://t.me/youthbit" target="_blank")
 										+e.icon
 											+icon('telegram')
 										span Telegram-канал хакатона
-									+e.link(href= "#" target="_blank")
+									+e.link(href= "https://t.me/youthbit_search" target="_blank")
 										+e.icon
 											+icon('telegram')
 										span Чат по&nbsp;поиску команды
