--- a/sourse/pug/blocks/sPersons/_sPersons.pug
+++ b/sourse/pug/blocks/sPersons/_sPersons.pug
@@ -2,6 +2,8 @@ mixin sPersons(data)
 	// start sPersons
 	+b.SECTION.sPersons.section#sPersons&attributes(attributes)
 		.container
+			script
+				include script.js
 			+b.section-title
 				h2 Наставники и&nbsp;Жюри
 			mixin slide(t,p)
@@ -18,32 +20,32 @@ mixin sPersons(data)
 					.col-auto
 						+arrow 
 			+e.title Эксперты
-			+e.slider--js.swiper
+			+e.slider--js.swiper#expert
 				.swiper-wrapper
-					- for (var x = 0; x < 2; x++)
-						+slide('Виктор Сожможнов','Следует отметить, что высококачественный прототип будущего проекта способствует')
-						+slide('Виктория Складчинкова','Прототип будущего проекта способствует')
-						+slide('Ким Самаджокис','Следует отметить')
-						+slide('Николай Ионов','Следует отметить, что высококачественный ')
+					//- - for (var x = 0; x < 2; x++)
+					//- 	+slide('Виктор Сожможнов','Следует отметить, что высококачественный прототип будущего проекта способствует')
+					//- 	+slide('Виктория Складчинкова','Прототип будущего проекта способствует')
+					//- 	+slide('Ким Самаджокис','Следует отметить')
+					//- 	+slide('Николай Ионов','Следует отметить, что высококачественный ')
 				+control()
 				
-			+e.title Трекеры
-			+e.slider--js.swiper
-				.swiper-wrapper
-					- for (var x = 0; x < 2; x++)
-						+slide('Виктор Сожможнов','Следует отметить, что высококачественный прототип будущего проекта способствует')
-						+slide('Виктория Складчинкова','Прототип будущего проекта способствует')
-						+slide('Ким Самаджокис','Следует отметить')
-						+slide('Николай Ионов','Следует отметить, что высококачественный ')
+			//- +e.title Трекеры
+			//- +e.slider--js.swiper#tracker
+			//- 	.swiper-wrapper
+					//- - for (var x = 0; x < 2; x++)
+					//- 	+slide('Виктор Сожможнов','Следует отметить, что высококачественный прототип будущего проекта способствует')
+					//- 	+slide('Виктория Складчинкова','Прототип будущего проекта способствует')
+					//- 	+slide('Ким Самаджокис','Следует отметить')
+					//- 	+slide('Николай Ионов','Следует отметить, что высококачественный ')
 				+control()
 
 			+e.title Жюри
-			+e.slider--js.swiper.mb-0
+			+e.slider--js.swiper.mb-0#jury
 				.swiper-wrapper
-					- for (var x = 0; x < 2; x++)
-						+slide('Виктор Сожможнов','Следует отметить, что высококачественный прототип будущего проекта способствует')
-						+slide('Виктория Складчинкова','Прототип будущего проекта способствует')
-						+slide('Ким Самаджокис','Следует отметить')
-						+slide('Николай Ионов','Следует отметить, что высококачественный ')
+					//- - for (var x = 0; x < 2; x++)
+					//- 	+slide('Виктор Сожможнов','Следует отметить, что высококачественный прототип будущего проекта способствует')
+					//- 	+slide('Виктория Складчинкова','Прототип будущего проекта способствует')
+					//- 	+slide('Ким Самаджокис','Следует отметить')
+					//- 	+slide('Николай Ионов','Следует отметить, что высококачественный ')
 				+control()
 	// end sPersons
