--- a/sourse/pug/blocks/sProcedure/_sProcedure.pug
+++ b/sourse/pug/blocks/sProcedure/_sProcedure.pug
@@ -7,17 +7,17 @@ mixin sProcedure(data)
 			+e.row.row
 				+e.col.col-lg-3
 					+icon('curved-arrow-1')
-					+e.item
+					+e.item(href="https://lk.youthbit.ru/")
 						span 25&nbsp;января&nbsp;&minus; 14&nbsp;февраля
 						b Зарегистрируйся <br> на&nbsp;хакатон
 				+e.col.col-lg-3
 					+icon('curved-arrow-2')
-					+e.item
+					+e.item(href="https://lk.youthbit.ru/team")
 						span 25&nbsp;января&nbsp;&minus; 14&nbsp;февраля
 						b Собери <br> команду
 				+e.col.col-lg-3
 					+icon('curved-arrow-3')
-					+e.item
+					+e.item(href="https://lk.youthbit.ru/hack")
 						span 25&nbsp;января&nbsp;&minus; 14&nbsp;февраля
 						b Выбери <br> кейс
 				+e.col.col-lg-3
