--- a/sourse/pug/blocks/sProcedure/_sProcedure.scss
+++ b/sourse/pug/blocks/sProcedure/_sProcedure.scss
@@ -33,6 +33,9 @@
 		border: 10px solid $success;
 		margin: 0 rem(12);
 		min-height: rem(90);
+		&:hover{
+			background-color: $success;
+		}
 		@include media-breakpoint-up(sm) {
 			min-height: rem(100);
 		}
