--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -30,11 +30,11 @@ mixin top-nav()
 							+menu-toggle()
 							+mnu()
 							+soc().d-xl-none
-							+e.btn.btn.btn-success.d-xl-none(href="#") Регистрация/Войти
+							+e.btn.btn.btn-success.d-xl-none(href="https://lk.youthbit.ru/") Регистрация/Войти
 				.col-auto.d-none.d-xl-flex
 					+soc()
 				.col-auto.d-none.d-xl-inline-block
-					+e.btn.btn.btn-success(href="#") Регистрация/Войти
+					+e.btn.btn.btn-success(href="https://lk.youthbit.ru/") Регистрация/Войти
 				.col-auto.order-xl-first
 					+e.logo(href="#")
 						+img('img/svg/header-logo.svg')
