--- a/sourse/pug/blocks/sCases/_sCases.pug
+++ b/sourse/pug/blocks/sCases/_sCases.pug
@@ -31,7 +31,7 @@ mixin sCases(data)
 							p Каждый год в&nbsp;команду Росмолодёжи приходят новые специалисты, которых необходимо интегрировать в&nbsp;экосистему ведомства и&nbsp;его корпоративную культуру.
 							p Руководителям подразделений и&nbsp;коллегам сложно мгновенно погрузить нового сотрудника в&nbsp;специфику его деятельности. Необходимые для адаптации новичков документы хранятся на&nbsp;различных ресурсах. Новый человек попадает в&nbsp;активный информационный поток, с&nbsp;большим количеством событий, мероприятий, внешних и&nbsp;внутренних коммуникаций. В&nbsp;результате у&nbsp;многих в&nbsp;начале работы возникают сложности с&nbsp;поиском необходимых материалов и&nbsp;контактов.
 							p Перед участниками хакатона стоит задача разработать информационный сервис&nbsp;&mdash; инструмент для современного и&nbsp;качественного процесса адаптации, помогающий в&nbsp;поиске необходимых материалов и&nbsp;выстраивании эффективных коммуникаций между новыми сотрудниками, HR-службой и&nbsp;руководством.
-							a(href="#").tabs__content-btn Хочу решить кейс
+							a(href="https://lk.youthbit.ru/").tabs__content-btn Хочу решить кейс
 						.tabs__case-manager
 							.tabs__case-manager-btn
 								h5 Постановщик кейса
@@ -72,7 +72,7 @@ mixin sCases(data)
 							p Информационный ресурс Росмолодёжи (ФГАИС &laquo;Молодежь России&raquo;) позволяет собирать данные о&nbsp;субъектах государственной молодёжной политики и&nbsp;результатах их&nbsp;деятельности более, чем по&nbsp;400 показателям из&nbsp;11&nbsp;разделов для формирования различных отчетов.
 							p На&nbsp;сегодняшний день большой массив данных собирается в&nbsp;виде таблиц, что недостаточно информативно, с&nbsp;точки зрения их&nbsp;визуализации. Таблицы неудобно использовать в&nbsp;рамках выступлений или презентаций.
 							p Перед участниками хакатона, выбравшими этот кейс, стоит задача разработки информативных и&nbsp;интересных, с&nbsp;точки зрения интерфейса, дашбордов, визуализирующих табличные данные для руководителя и&nbsp;сотрудников Росмолодёжи.
-							a(href="#").tabs__content-btn Хочу решить кейс
+							a(href="https://lk.youthbit.ru/").tabs__content-btn Хочу решить кейс
 						.tabs__case-manager
 							.tabs__case-manager-btn
 								h5 Постановщик кейса
@@ -109,7 +109,7 @@ mixin sCases(data)
 							p У&nbsp;Росмолодёжи есть информационный ресурс (ФГАИС &laquo;Молодежь России&raquo;), обеспечивающий взаимодействие между субъектами молодёжной политики, реализацию мероприятий, программ и&nbsp;мер государственной поддержки для молодёжи, в&nbsp;частности, предоставление грантов для воплощения творческих, патриотических, образовательных, добровольческих и&nbsp;иных проектов. На&nbsp;сегодняшний день в&nbsp;нем зарегистрировано более 2&nbsp;млн. пользователей.
 							p При заполнении заявок у&nbsp;участников грантового конкурса часто возникают вопросы. Ежедневно в&nbsp;техническую поддержку поступает более 20&nbsp;обращений по&nbsp;навигации и&nbsp;поиску необходимой информации, более 40&nbsp;обращений по&nbsp;подаче заявки на&nbsp;мероприятия, до&nbsp;150 обращений по&nbsp;вопросу подачи заявки на&nbsp;получение грантовой поддержки.  Основная проблема&nbsp;&mdash; сложный и&nbsp;&laquo;негибкий&raquo; интерфейс грантового модуля ФГАИС &laquo;Молодежь России&raquo;.
 							p Во&nbsp;время хакатона участникам нужно разработать цифровой помощник по&nbsp;заполнению заявки для участия в&nbsp;грантовом конкурсе. Помощник может иметь голосовое управление (участникам предлагается предоставить прототип или концепцию голосового модуля цифрового помощника).
-							a(href="#").tabs__content-btn Хочу решить кейс
+							a(href="https://lk.youthbit.ru/").tabs__content-btn Хочу решить кейс
 						.tabs__case-manager
 							.tabs__case-manager-btn
 								h5 Постановщик кейса
@@ -147,7 +147,7 @@ mixin sCases(data)
 							p При открытии сайта на&nbsp;мобильном устройстве через браузер, могут некорректно отображаться поля для ввода данных, что неудобно для пользователей и&nbsp;способствует их&nbsp;оттоку с&nbsp;ресурса. Молодые люди не&nbsp;могут использовать платформу по&nbsp;дороге на&nbsp;учебу или работу, в&nbsp;отпуске или в&nbsp;путешествии. Таким образом, многие возможности платформы остаются незамеченными.
 							p Мобильное приложение позволит подавать и&nbsp;оперативно отслеживать статус заявки на&nbsp;бронирование места размещения, участвовать в&nbsp;мероприятиях и&nbsp;просматривать новости. 
 							p Участникам хакатона предстоит разработать мобильную версию платформы с&nbsp;удобным интерфейсом и&nbsp;функциями push-уведомлений, постингом в&nbsp;социальную сеть&nbsp;VK, геймификацией и&nbsp;различными другими полезными функциями.
-							a(href="#").tabs__content-btn Хочу решить кейс
+							a(href="https://lk.youthbit.ru/").tabs__content-btn Хочу решить кейс
 						.tabs__case-manager
 							.tabs__case-manager-btn
 								h5 Постановщик кейса
@@ -164,14 +164,14 @@ mixin sCases(data)
 											+e.item
 												+e.img-wrap
 													.img-wrap-center
-														+img(src="img/svg/cases-logo-2.svg")
-												+e.title Больше, чем путешествие
+														+img(src="img/svg/cases-logo-3.svg")
+												+e.title Министерство науки и&nbsp;высшего образования Российской Федерации
 										+e.slide.swiper-slide
 											+e.item
 												+e.img-wrap
 													.img-wrap-center
-														+img(src="img/svg/cases-logo-3.svg")
-												+e.title Министерство науки и&nbsp;высшего образования Российской Федерации
+														+img(src="img/svg/cases-logo-2.svg")
+												+e.title Больше, чем путешествие
 								.swiper-pagination
 								// - tabs__links скрыт классом .d-none
 								.tabs__links.d-none
@@ -223,7 +223,7 @@ mixin sCases(data)
 //- 									+icon('sContact-win')
 //- 									span Победители и&nbsp;призеры
 //- 							.col-xl.order-xl-first
-//- 								a(href="#").tabs__content-btn Хочу решить кейс!
+//- 								a(href="https://lk.youthbit.ru/").tabs__content-btn Хочу решить кейс!
 //- 					.tabs__content.active
 //- 						.tabs__content-wrap
 //- 							h4 Цифровой помощник
@@ -243,7 +243,7 @@ mixin sCases(data)
 //- 									+icon('sContact-win')
 //- 									span Победители и&nbsp;призеры
 //- 							.col-xl.order-xl-first
-//- 								a(href="#").tabs__content-btn Хочу решить кейс!
+//- 								a(href="https://lk.youthbit.ru/").tabs__content-btn Хочу решить кейс!
 
 //- 					.tabs__content
 //- 						.tabs__content-wrap
@@ -264,7 +264,7 @@ mixin sCases(data)
 //- 									+icon('sContact-win')
 //- 									span Победители и&nbsp;призеры
 //- 							.col-xl.order-xl-first
-//- 								a(href="#").tabs__content-btn Хочу решить кейс!
+//- 								a(href="https://lk.youthbit.ru/").tabs__content-btn Хочу решить кейс!
 //- 					.tabs__content
 //- 						.tabs__content-wrap
 //- 							h4 Объединяя молодёжь
