--- a/sourse/pug/blocks/sFAQ/_sFAQ.pug
+++ b/sourse/pug/blocks/sFAQ/_sFAQ.pug
@@ -4,27 +4,29 @@ mixin sFAQ(data)
 		.container
 			+b.section-title
 				h2 FAQ
-			+ddGroup()
-				h3 Общие вопросы о&nbsp;проекте в&nbsp;2023
-				+ddGroupItem(`Я&nbsp;могу принять участие в&nbsp;любом мероприятии?`)
-				+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
-				+ddGroupItem(`Кто может принять участие в&nbsp;хакатоне?`)
-				+ddGroupItem(`Могу&nbsp;ли я&nbsp;решить несколько кейсов?`)
-				+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
-			+ddGroup()
-				h3 Общие вопросы о&nbsp;хакатоне
-				+ddGroupItem(`Я&nbsp;могу принять участие в&nbsp;любом мероприятии?`)
-				+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
-			+ddGroup()
-				h3 Задачи на хакатон
-				+ddGroupItem(`Я&nbsp;могу принять участие в&nbsp;любом мероприятии?`)
-				+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
-				+ddGroupItem(`Я&nbsp;могу принять участие в&nbsp;любом мероприятии?`)
-				+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
-			+ddGroup()
-				h3 Задачи на хакатон
-				+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
-				+ddGroupItem(`Я&nbsp;могу принять участие в&nbsp;любом мероприятии?`)
-				+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
+			script
+				include script.js
+			//- +ddGroup()
+			//- 	h3 Общие вопросы о&nbsp;проекте в&nbsp;2023
+			//- 	+ddGroupItem(`Я&nbsp;могу принять участие в&nbsp;любом мероприятии?`)
+			//- 	+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
+			//- 	+ddGroupItem(`Кто может принять участие в&nbsp;хакатоне?`)
+			//- 	+ddGroupItem(`Могу&nbsp;ли я&nbsp;решить несколько кейсов?`)
+			//- 	+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
+			//- +ddGroup()
+			//- 	h3 Общие вопросы о&nbsp;хакатоне
+			//- 	+ddGroupItem(`Я&nbsp;могу принять участие в&nbsp;любом мероприятии?`)
+			//- 	+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
+			//- +ddGroup()
+			//- 	h3 Задачи на хакатон
+			//- 	+ddGroupItem(`Я&nbsp;могу принять участие в&nbsp;любом мероприятии?`)
+			//- 	+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
+			//- 	+ddGroupItem(`Я&nbsp;могу принять участие в&nbsp;любом мероприятии?`)
+			//- 	+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
+			//- +ddGroup()
+			//- 	h3 Задачи на хакатон
+			//- 	+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
+			//- 	+ddGroupItem(`Я&nbsp;могу принять участие в&nbsp;любом мероприятии?`)
+			//- 	+ddGroupItem(`Как будет проходить конкурс в&nbsp;2023&nbsp;году?`)
 
 	// end sFAQ
