--- a/sourse/pug/blocks/sLogos/_sLogos.pug
+++ b/sourse/pug/blocks/sLogos/_sLogos.pug
@@ -2,6 +2,8 @@ mixin sLogos(data)
 	// start sLogos
 	+b.SECTION.sLogos.section#sLogos&attributes(attributes)
 		//- +img('img/page-bg-img-3.png')
+		script
+			include script.js
 		.container
 			+b.section-title
 				h2 Организаторы и Партнёры
@@ -14,21 +16,19 @@ mixin sLogos(data)
 					.col-auto
 						+arrow 
 			+e.slider-wrap
-				+e.slider--js.swiper-slider
+				+e.slider--org.--org-js.--js.swiper-slider
 
 					.swiper-wrapper
-						- for (var x = 0; x < 10; x++)
-							+e.slide.swiper-slide
-								+e.item
-									+e.img-wrap 
-										.img-wrap-center
-											+img("img/svg/logo-1.svg")
-									+e.title Федеральное агентство по делам молодёжи
+						//- - for (var x = 0; x < 10; x++)
+						//- 	+e.slide.swiper-slide
+						//- 		+e.item
+						//- 			+e.img-wrap 
+						//- 				.img-wrap-center
+						//- 					+img("img/svg/logo-1.svg")
+						//- 			+e.title Федеральное агентство по делам молодёжи
 					+control()
-			+e.title-sub  Партнеры
+			+e.title-sub  Партнёры
 			+e.slider-wrap
-				script
-					include script.js
 				+e.slider--partners.--partners-js.--js.swiper-slider.mb-0
 					.swiper-wrapper
 
