edit  logo size

--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -24,7 +24,8 @@ mixin sContact()
 											+icon('telegram')
 										span Чат по&nbsp;поиску команды
 							.col-lg.text-lg-end
-								+icon('sContact-logo')
+								a(href="https://myrosmol.ru/" target="_blank") 
+									+icon('sContact-logo')
 	// end sContact
 //- mixin sContact()
 //- 	// start sContact
