--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -37,5 +37,5 @@ mixin top-nav()
 					+e.btn.btn.btn-success(href="https://lk.youthbit.ru/") Регистрация/Войти
 				.col-auto.order-xl-first
 					+e.logo(href="#")
-						+img('img/svg/header-logo.svg')
+						+img('img/header-logo.png')
 	// end top-nav
