--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -45,9 +45,10 @@
 	}
 	&__logo {
 		display: block;
-		@include media-breakpoint-only(xl) {
-			max-width: rem(190);
-		}
+		max-width: rem(203);
+		// @include media-breakpoint-only(xl) {
+		// 	max-width: rem(190);
+		// }
 		img {
 			max-width: 100%;
 			height: auto;
