--- a/sourse/pug/layout/main.pug
+++ b/sourse/pug/layout/main.pug
@@ -31,7 +31,7 @@ html(lang="ru")
 		<meta name="description" content="Всероссийский хакатон «Молодёжный бит» для digital-поколения: собери команду, реши кейс, выиграй 250 000 рублей и путешествие по России!">
 
 		//- <meta property="og:url" content="http://www.example.html" />
-		//- <meta property="og:image" content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+		<meta property="og:image" content="img/og-imge.png" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="17-19 февраля 2023 г.:  Хакатон «‎Молодёжный бит»‎ для талантливых ИТ-специалистов" />
 		<meta property="og:description" content="Всероссийский хакатон «Молодёжный бит» для digital-поколения: собери команду, реши кейс, выиграй 250 000 рублей и путешествие по России!" />
