--- a/sourse/pug/blocks/sCases/_sCases.pug
+++ b/sourse/pug/blocks/sCases/_sCases.pug
@@ -22,11 +22,11 @@ mixin sCases(data)
 							.tabs__tags
 								.row
 									.col-auto
-										.btn Управление персоналом
-									.col-auto
-										.btn Mobile
-									.col-auto
-										.btn Чат-бот
+										.btn HR
+									//- .col-auto
+									//- 	.btn Mobile
+									//- .col-auto
+									//- 	.btn Чат-бот
 							p Миссия Росмолодёжи&nbsp;&mdash; создать среду, которая поможет молодым найти и&nbsp;реализовать свои мечты и&nbsp;таланты в&nbsp;нашей стране.
 							p Каждый год в&nbsp;команду Росмолодёжи приходят новые специалисты, которых необходимо интегрировать в&nbsp;экосистему ведомства и&nbsp;его корпоративную культуру.
 							p Руководителям подразделений и&nbsp;коллегам сложно мгновенно погрузить нового сотрудника в&nbsp;специфику его деятельности. Необходимые для адаптации новичков документы хранятся на&nbsp;различных ресурсах. Новый человек попадает в&nbsp;активный информационный поток, с&nbsp;большим количеством событий, мероприятий, внешних и&nbsp;внутренних коммуникаций. В&nbsp;результате у&nbsp;многих в&nbsp;начале работы возникают сложности с&nbsp;поиском необходимых материалов и&nbsp;контактов.
